@@ -611,7 +611,7 @@ void add_torrent(libtorrent::session& ses
 	std::string filename = combine_path(save_path, t->name() + ".resume");
 
 	std::vector<char> buf;
-	if (load_file(filename.c_str(), buf) == 0)
+	if (load_file(filename.c_str(), buf, ec) == 0)
 		p.resume_data = &buf;
 
 	p.ti = t;
@@ -889,10 +889,10 @@ int main(int argc, char* argv[])
 			+ alert::stats_notification));
 
 	std::vector<char> in;
-	if (load_file(".ses_state", in) == 0)
+	error_code ec;
+	if (load_file(".ses_state", in, ec) == 0)
 	{
 		lazy_entry e;
-		error_code ec;
 		if (lazy_bdecode(&in[0], &in[0] + in.size(), e, ec) == 0)
 			ses.load_state(e);
 	}
