@@ -1,3 +1,4 @@
+	* fixed error handling in torrent_info constructor
 	* fixed bug in torrent_info::remap_files
 	* fix python binding for wait_for_alert
 	* only apply privileged port filter to DHT-only peers
